5-objects/_objects.widgets.scss
/*=====================================
=      STANDALONE UI WIDGETS          =
=====================================*/

$vic-large-logo-width: 480px;

.logo.large {
    width: $vic-large-logo-width;

    @include media( $desktop-and-smaller ) {
        width: $vic-large-logo-width * 0.8;
    }

    @include media( $mobile-large-and-smaller ) {
        width: $vic-large-logo-width * 0.7;
    }

    @include media( $mobile ) {
        width: 95%;
        max-width: $vic-large-logo-width * 0.6;
    }
}

.overlaid { overflow: hidden; }


/* Cards-like tiles. */
$tile-padding: 1.5em;
$tile-bg:      #f0f0f0;

.tiles {
    -webkit-column-count: 2; /* Chrome, Safari, Opera */
    -moz-column-count: 2; /* Firefox */
    column-count: 2;
}

.tile {
    -webkit-column-break-inside: avoid;
    page-break-inside: avoid; /* Firefox is dumb */
    break-inside: avoid;
    // Desktop-view ONLY
    display: inline-block;
    margin-bottom: 1.2em;
    background: $tile-bg;
    vertical-align: top;
    width: 100%;

    &.collapsible-wrapper .collapsible__control { margin-top: 0; }

    .title { line-height: 1.2; }

    .tag {
        display: inline-block;
        padding: .15em .6em;
        border-radius: .2em;
        background-color: $green-victoria;
        color: $white;
        white-space: nowrap;
    }

    .btn-holder {
        margin: .5em 0;
        text-align: center;
    }

    .sub-title {
        color: $grey-dusty-gray;
        font-weight: $weight-normal;
    }
    .code {
        display: block;
        float: right;
        margin: .2em 0 .2em .5em;
        line-height: 1;
        font-size: 90%;
        font-weight: $weight-normal;
        color: $grey-dusty-gray;
    }

    &:nth-child(odd){ margin-left: 0; }
    &:nth-child(even){ margin-right: 0; }

    /** Tile inside related qualifications listing. */
    .quals-listing & {
        clear: both;

        &:first-child { margin-top: .75em; }
        .tile__header { margin: 1em $tile-padding; }

        .code {
            float: none;
            display: inline-block;
            margin: 0;
            font-size: inherit;
        }

        .title { font-size: 1.25em; }

        .btn-holder {
            float: right;
            text-align: right;
            min-width: 15em;
            margin: 0 0 1.5em 1.5em;

            .btn { margin: 0; }

            .note {
                text-align: right;
                font-size: 90%;
                display: block;
                margin-top: .35em;
            }

            .link {
                text-decoration: underline;

                @include hoverify() { text-decoration: none; }
            }
        }

        .label .ico {
            display: inline-block;
            width: 1em;
        }

        .tile__list {
            margin: 0 0 .8em;

            > li {
                display: inline-block;
                margin-right: 1.5em;
            }

            .tooltip-icon { margin-left: 0; }
        }

        .description {
            display: block;
            max-width: 40em;
        }

        /** Tiles' responsivity. */
        @include media ( $tablet-and-smaller ) {
            .tile__list > li { display: block; }
        }

        @include media ( $mobile-large-and-smaller ) {
            .tile__body{ flex-wrap: wrap; }
            .btn-holder {
                margin: 1.2em 0 0;
                width: 100%;
                float: none;
                text-align: center;

                .note { text-align: inherit; }
            }
        }
    }
}

.tile__header { margin: $tile-padding; }

.tile__body,
.tile__list { margin: 0 $tile-padding 1em; }

.tile__body { display: flex; }

.tile__list {
    > li {
        margin-bottom: .3em;

        > .ico:before {
            width: 1em;
            margin-right: .1em;
            color: $grey-dove;
        }
    }

    .label {
        margin-right: .5em;
        color: $grey-dove;
        font-weight: $weight-semibold;
        font-size: 90%;
    }

    .tag { font-size: 90%; }
    .tooltip-icon { vertical-align: initial; }

    &.grid {
        margin: 1.5em 1em;
        text-align: center;

        > li {
            vertical-align: top;
            display: inline-block;
            width: 32%;        }

        .label, .value, .note {
            display: block;
            line-height: 1.15;
        }

        .label{
            margin-bottom: .5em;
            margin-right: 0;
        }

        .note { font-size: 80%; }

        .value {
            font-size: 120%;
            margin-bottom: .2em;
        }

        /** Content-based breakpoints. */
        @media screen and ( max-width: em( 400px, $em-browser-default ) ) {
            & > li {
                width: 100%;
                margin-bottom: .7em;
            }
        }
    }
}

/** Tiles' responsivity */
@include media ( $tablet-and-smaller ) {
    .tiles {
        -webkit-column-count: 1; /* Chrome, Safari, Opera */
           -moz-column-count: 1; /* Firefox */
                column-count: 1;
    }

    .tile {
        &:nth-child(odd),
        &:nth-child(even) {
            margin-left:  0;
            margin-right: 0;
        }
    }
}

@include media ( $mobile-large-and-smaller ) {
    .tile__header {
        margin: 1em;
    }

    .tile__list {
        margin-left: 1em;
        margin-right: 1em;
    }
}

@include media ( $mobile ) {
    .tile__header .code {
        float: none;
        display: inline-block;
        margin: 0 .3em 0 0;
    }

    .tile__list {
        .value { display: block; }
    }
}


/** Inner content anchors links. */

.content-anchors {

    > strong {
        display: inline-block;
        margin-right: 1.75em;
        font-weight: $weight-bold;
    }

    ul {
        display: inline-block;
        font-size: 110%;
    }

    li {
        display: inline-block;
        margin-right: .7em;

        &:last-child::after { display: none; }

        &:after {
            @include objectify();
            content: '\00B7';
            margin-left: .4em;
        }
    }

    @include media ( $mobile-large-and-smaller ) {

        li,
        > strong {
           display: block;
        }

        > strong { margin-bottom: .5em; }
        li:after { display: none; }
    }
}



/** Collapsible/Expandable block. */

$collapsible-transparency-height: 4em;

.collapsible-wrapper {

    .collapsible__control {
        position: relative;
        display: block;
        margin: 1em 0;
        text-align: center;

        > a { padding: .5em; }
    }

    //.collapsed {}

    // Adds semi-transparent overlay to see part of the collapsed block
    &.collapsed .semitransparent + .collapsible__control {
        @include before( block, $position: absolute ) {
            pointer-events: none;
            top: -$collapsible-transparency-height;
            @include size( 100% $collapsible-transparency-height );
            background: linear-gradient( rgba( #000, 0 ) 0%, white 100% );
        }
    }
}

    .block .collapsible__control:last-child {
        margin-bottom: 0;
    }


.collapsible {
    display: block;
    overflow: hidden;
    height: auto;
    transition: all .3s ease;
}

/** Generic listing with cards placed in two columns. */

.cards-listing {
    @include clearfix;
}



/** Contact card(s). */

$contact-portrait-size: 150px;

.contact-card {
    display: inline-block;
    vertical-align: top;
    width: 49%;
    margin: .45em 0;

    // 2 columns-layout -> Make all even cards margined from the odd cards
    &:nth-child(even) { margin-left: 2%; }

    .portrait-wrap {
        position: relative;
        overflow: hidden;
        float:left;
        height: $contact-portrait-size;
        width: $contact-portrait-size;
        margin-right: 1.5em;
        border-radius: 50%;
    }

    // Centering trick with dynamic right & left positioning
    .portrait {
        display: inline-block;
        position: relative; right: -50%;

        > img {
            display: inline-block;
            position: relative; left: -50%;
            height: $contact-portrait-size;
            width: auto;
        }
    }

    //.contacts {}

    // Card's body
    .card-info { overflow: hidden; }

    @include media ( $tablet-and-smaller ) {
        margin-left: 0;
        width: 100%;
        &:nth-child(even) { margin-left: 0; }
    }

    @include media ( $mobile-large-and-smaller ) {
        text-align: left;

        &:not(:last-child){
            border-bottom: 1px solid #EEE;
            margin-bottom: .8em;
            padding-bottom: .8em;
        }

        .portrait-wrap {
            float: none;
            margin-bottom: .5em;
            margin-left: auto;
            margin-right: auto;
        }
    }
}

/** General fixed popup. */

$popup-width:    290px;
$popup-border:   #fff;

/* Pop-up box. */
.popup-positioner {
    display: none;
    z-index: $z-index-max;
    position: fixed; bottom: 0;
    margin: 0 0 2.5em 5%;
    width: $popup-width;

    &.show { display: block; }
}

.popup {
    padding: $base-margin;
    border: 1px solid $popup-border;
    background-color: $grey-gallery;
    box-shadow: 0 0 7px rgba( #000, .35 );

    & > header {
        font-size: 90%;

        //.caption {}

        // 'x' button
        .btn-close {
            opacity: .4;
            display: block;
            float: right;
            margin-left: .5em;
            color: $grey-mako;
            font-size: 170%;
            line-height: 1.1;

            @include hoverify { opacity: 1; }
        }
    }

    .body { font-size: 90%; }

    .btn-holder {
        .btn { margin: 0; }
    }
}

@include media ( $mobile-large-and-smaller ) {
    .popup-positioner {
        margin: 0;
        bottom: auto; top: 0;
        width: 100%
    }

    .popup { margin: 0; }
}

    // Feedback popup
    //.feedback {}

/** Warning block. */
.warning-strip {

    .block {
        background-color: $yellow-spring-wood;

        @include media ( $tablet-and-bigger ) {
            margin: $base-margin;
        }
    }

    // Implies it *MUST BE* used as a block rather than a strip (~nested element)
    &.block-container {
        .block {
            margin-top: 0;
            margin-bottom: $base-margin;
        }

        .content-simple { padding-top: $base-margin;}
    }
}

/** Simple warning wrapper. */
.warning {
    padding: 1em;
    background-color: $yellow-spring-wood;
}

